--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.ATBSelenium</groupId>
-  <artifactId>ATB9XSeleniumFramewrork</artifactId>
+  <artifactId>ATB9XSeleniumFramework</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
