--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
       <artifactId>selenium-java</artifactId>
       <version>4.27.0</version>
     </dependency>
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>5.7.0</version>
+    </dependency>
 
     <dependency>
       <groupId>org.testng</groupId>
