--- a/src/main/java/resources/data.properties
+++ b/src/main/java/resources/data.properties
@@ -11,7 +11,7 @@ invalid_password=Test@2024
 expected_username=Aman
 error_message=Your email, password, IP address or location did not match
 invalid_error_message=Pramod email, password, IP address or location did not match
-browser=chrome
+browser=firefox
 
 # Project 2 - Orange HR
 ohr_username=admin
